Add WGAN MNIST and readme.

--- a/GAN-MNIST.ipynb
+++ b/GAN-MNIST.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "#reference GAN https://github.com/daymos/simple_keras_GAN/blob/master/gan.py\n",
+    "#reference GAN https://github.com/Zackory/Keras-MNIST-GAN/blob/master/mnist_gan.py\n",
     "#reference WGAN https://github.com/eriklindernoren/Keras-GAN/blob/master/wgan/wgan.py"
    ]
   },
